# diit_121-ipz_y4_web

1/: diit_941_web1_safonov.odt  index.html
2/: diit_941_web2_safonov.odt  index.html
3/: .~lock.diit_941_web3_safonov.odt#  diit_941_web3_safonov.odt  index.html  index.js  styles.css
3/src/: index.html  index.js  styles.css
4/: README.md  diit_941_web4_safonov.odt
4/server/: Cargo.toml
4/server/src/: main.rs
4/website/src/: index.html  index.js  styles.css
5/server/: Cargo.toml  cookies.txt
5/server/src/: main.rs
